# ashare-sync

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README-zhCN.md  example.config.json
scripts/: release.py
src/ashare_sync/: app.py  config.py  utils.py
src/ashare_sync/commands/: health_check.py  sync_hist.py  sync_list.py
test/mock_data/sync_list/: a_index_code_name_mock.csv  bj_code_name_mock.csv  sz_code_name_mock.csv
