[project]
name = "ashare-sync"
version = "0.1.1"
description = "用于同步A股数据。Used for synchronizing A-share data."
requires-python = ">=3.13,<3.14"
dependencies = [
    "akshare>=1.18.55",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "pyarrow>=23.0.1",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
    "tushare>=1.4.29",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.46",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "ruff>=0.14.14",
    "semver>=3.0.4",
]

[project.scripts]
ashare-sync = "ashare_sync.__main__:app"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_sync"]

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv.sources]
ashare-sync = { workspace = true, editable = true }
